--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en"></html>
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kelvin</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body></body>
-<body>
-  <div class="container">
-    <header class="header"> </header>
-    <main class="main"> </main>
-    <footer class="footer"> 
-      <h3>dfbfdbgf</h3>
-    </footer>
-  </div>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kelvin</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <header class="header"> 
+        <div class="wrpper"> </div>
+      </header>
+      <main class="main"> </main>
+      <footer class="footer"> </footer>
+    </div>
+  </body>
+</html>
